fix api and tests
